Changed security handling. leaving that task to the main service which will act as gateway. also fixed some small bugs
